# ChangeLog for net-misc/dhcpcd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.360 2013/06/09 23:00:55 vapier Exp $

  09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

*dhcpcd-5.99.7-r1 (07 Jun 2013)

  07 Jun 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-5.99.7-r1.ebuild,
  +files/dhcpcd-5.99.7-fix-prefix.patch:
  revision bump for bug #358167

  04 Jun 2013; William Hubbs <williamh@gentoo.org>
  -files/dhcpcd-5.6.2-if-bsd.patch, -files/dhcpcd.initd-1:
  remove old files

*dhcpcd-5.99.7 (04 Jun 2013)

  04 Jun 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-5.99.7.ebuild,
  -dhcpcd-5.99.6.ebuild:
  version bump, 5.99.7 was just released

*dhcpcd-5.99.6 (04 Jun 2013)

  04 Jun 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-5.99.6.ebuild,
  dhcpcd-9999.ebuild:
  version bump and sync live ebuild. Also drop the zeroconf use flag since I
  was advised that use flags should not manipulate configuration files.

*dhcpcd-5.6.8 (23 Apr 2013)

  23 Apr 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-5.6.8.ebuild,
  dhcpcd-9999.ebuild:
  version bump and sync live ebuild

  22 Feb 2013; William Hubbs <williamh@gentoo.org> dhcpcd-5.6.7.ebuild,
  dhcpcd-9999.ebuild:
  remove outdated code for systemd and sync live ebuild

  22 Feb 2013; William Hubbs <williamh@gentoo.org> -dhcpcd-5.6.6.ebuild:
  remove old version

  17 Feb 2013; Zac Medico <zmedico@gentoo.org> dhcpcd-5.6.7.ebuild:
  Add ~arm-linux keyword.

*dhcpcd-9999 (17 Feb 2013)

  17 Feb 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-9999.ebuild:
  add live ebuild for bug #457762, thanks to Scott Bertilson.

*dhcpcd-5.6.7 (05 Feb 2013)

  05 Feb 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-5.6.7.ebuild:
  version bump for #454528

*dhcpcd-5.6.6 (03 Jan 2013)

  03 Jan 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-5.6.6.ebuild: