@@ -1,12 +1,0 @@
-DEFINED_PHASES=configure install postinst preinst prepare
-DEPEND=virtual/pkgconfig
-DESCRIPTION=A fully featured, yet light weight RFC2131 compliant DHCP client
-EAPI=5
-HOMEPAGE=http://roy.marples.name/projects/dhcpcd/
-IUSE=+zeroconf elibc_glibc
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
-LICENSE=BSD-2
-SLOT=0
-SRC_URI=http://roy.marples.name/downloads/dhcpcd/dhcpcd-5.6.8.tar.bz2
-_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	systemd	3421a5715404244e4827acd1cf8ce654	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=639c84ce649578027ee4383b2f0623ec
