@@ -1,12 +1,12 @@
-DEFINED_PHASES=configure install postinst preinst prepare
+DEFINED_PHASES=configure install postinst prepare
 DEPEND=virtual/pkgconfig
 DESCRIPTION=A fully featured, yet light weight RFC2131 compliant DHCP client
-EAPI=4
+EAPI=5
 HOMEPAGE=http://roy.marples.name/projects/dhcpcd/
-IUSE=+zeroconf elibc_glibc
+IUSE=elibc_glibc
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
 LICENSE=BSD-2
 SLOT=0
-SRC_URI=http://roy.marples.name/downloads/dhcpcd/dhcpcd-5.6.7.tar.bz2
+SRC_URI=http://roy.marples.name/downloads/dhcpcd/dhcpcd-6.0.2.tar.bz2
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	systemd	3421a5715404244e4827acd1cf8ce654	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=58d9041bea2d29daee91bb1dfe7038e2
+_md5_=456c8bf7a7401ac6bee0b50a09efa13b
