@@ -5,31 +5,18 @@ AUX dhcpcd-5.99.7-fix-prefix.patch 808 SHA256 229e8ab2e3fc21be5c0643432eb26876ad
 AUX dhcpcd.initd 327 SHA256 72b42c9939fda3fb56666813513029ed36194c1708bddce06bcb3e131e547492 SHA512 0a188b67f0641a480ac6d3cf6a634dddc4b72b1b9b47df33b05fba5d802693dd88e0cece0bfe9b641009c03022c620595b1ce35cd53d5024ee87f4c81e9acf63 WHIRLPOOL b97b0cd52b52561e6726d5decd094a02dd046107b0647833f00635e3fc126ab9679b2a7f883f4d880c1221cdbd91b0b52efaaccfdfa44a5048cb28d47d022351
 AUX dhcpcd.service 183 SHA256 06aaf350b11b1cea6ced9e2b5c69011e1daf6eb0ac9b2a9f2c9f81a9be31f463 SHA512 9d4c99e984906fc80fca7f7dd436d2f12dfebec870e19cbc3c03c14b394ed81c664403c0ca3f3e3138572c54d1278c1a43d5495f963b442b1bbef229248b1dd4 WHIRLPOOL 1176c2d763f55a65a97a973bdfa907dfaa2e9b88e93013d749c1a492e06382a7f42fa23eb2bfe86f6eaabea6c65c34db138b6bf600e6c522336ec2d07f7d7044
 DIST dhcpcd-5.6.4.tar.bz2 85671 SHA256 4072999704585c16ac45458d459eb50186c3de91c3c14c3288896963cc30b594 SHA512 eb3892604b2f889b4f34835f4d8e0bb2d129f7d0d91da39760eeaf3f75883a6db0e1397ac65084a3ddc4a2968a389fc723e9f031a844ef5333451527be8cb7a2 WHIRLPOOL f8fba52a6f6d4e1822175069f6a636e83b09a1532bd258a4ec9b610e9eb196d35f1cfa0e855521f5d37edb840fb2dd4d46bffc8bf86ded0b205367711f4484ff
-DIST dhcpcd-5.6.7.tar.bz2 85983 SHA256 102cc37596216c0e2c0b230fe58bf880e993ec8663c7c2178fb2a06c25938c90 SHA512 6fdb3716c2e09208e9813642ab275f26f2a2fd96065531408e8ce33179398405c35f7d91c0f10cef71a2ece8b5179c6dcf9887eb6e59e2599be46ea338dc1023 WHIRLPOOL 8b5fb218b0f67777b4b1e0b2b71bfc9b0eb3bfcb1e3646891d481b39d907aef7fd9a867aa79d301699de8618af32fb7329c179bc96db1004af84ac444a80dd3e
-DIST dhcpcd-5.6.8.tar.bz2 86968 SHA256 a3b15da770623774f4e659bf3239fca50f03594207bca3a2ad011f0b68d8eec4 SHA512 20e51d19d2a45101fa28322be3f17aec081ec9ed026b07d24fc45e090135bcf2422e3d1d2a62f60a90714babd036faef2fa1f251dd69cfeb1cce021b56485fae WHIRLPOOL 246bfbd3ee56ac95ec86e02b50735b261b804647f995426e0a8c726e2dfa2609645a6c1ad34f297f7a8f89094689d03146ed8a73810fb8bcd91839fcf2f72cb0
 DIST dhcpcd-5.99.7.tar.bz2 106613 SHA256 ed80277a3f6532f87d4c76d6fc30a1c99aa9884473d62a5bf241ea58fda4cf08 SHA512 99ce577751188b7091af5354d82d25d305ba9eb038ce4a450c0662cecaa3d890eea5766df77207a7341c135e9f3d84112d30c7e1d595ee0e367a720444977e48 WHIRLPOOL 1f4ec562568317642ba8864dcc3ea483e946413d5bd99a94fc2c6030872b41f17f108226318915193683e30a37be4e837eb74585b6cb50ce1000d5132a581e29
+DIST dhcpcd-6.0.2.tar.bz2 109416 SHA256 6d5877aaa930911995229c6758fcaa7da0b8d6c55c4a7d38c4ab124e457d320b SHA512 cd0f915a5a5a334b834029a3eae230c6b3256894aabe42ce3b23efd1ded12b66c40ff4fdc8e03a8904cee18b506fcb552df57cc8446cd33adab935578aba2cc6 WHIRLPOOL aa92d75594fc14560d366e373dcf9461c01600200fcd74be8d639f243f578eec6e8f8030cb5e6ba0d40d08da3d59d971c713de98e528f7cc70597fd098c3e3a5
 EBUILD dhcpcd-5.6.4.ebuild 3426 SHA256 bb38c91f9bb8545bcd32ccb148d17adb25193a11e458eb14c55dc44707aa4ee4 SHA512 e9d3c05b44438dbf0ba491b7723e982c4d06d27181e629702e8dc2641f20cfed211959605c8e4ea9cc05e84c21a1ee3542ff4ec0bf8de407014176dc7564814d WHIRLPOOL a840f0c6d2feca17f6353ce7361047735875de4ee8dc2cb3544c0fa17095aaf70c0f0c67e65ec22fedf5b30f9cd7dcf7f007970d43aaf76bae0675f6339e8954
-EBUILD dhcpcd-5.6.7.ebuild 2343 SHA256 8c435aa1c53ccd694f51b641529f628de45aa272815b51c010aafcfda4e15254 SHA512 7bd7118668f3474316bba95385b534756a333a667531bb4ad123c0a52622afcf23d91b91c09b298694c4568ceb6245127a50edbe3634fb06e8b593fae42bf07f WHIRLPOOL af8fd7ab0dc90907fbc6ae68e7caf0936908f01e513b85beba484db5f89279aa537ec72396bfee70cf49bea6a4df074f0efbd1b7e78b7c4e2ba48629187e6bde
-EBUILD dhcpcd-5.6.8.ebuild 2451 SHA256 eba86d6eb34c74a7a69613e3ca187fd7fc302e9143097e4f98e55e60182b970d SHA512 12b4dab7eb25ba1a9495e1db51c4c70a58ee21567985470e1edea77a6cd2449562639a7c0d739613a7a10fcf065e6e732720eb04281fc1d45e476db47f214861 WHIRLPOOL 3b63e70839703647935b8d666cc2707d272a308fa5011e61649247aed21ec5b07e6facc41dd8a606876266ea60f8183a74fc5990298857c179755cf5b5f0c864
 EBUILD dhcpcd-5.99.7-r1.ebuild 2455 SHA256 037aa0e16b6015d7ddde5e44d1a1a4b093cb6a37c77b9c23fbbaa79a516c6c64 SHA512 bea7343d0f6e2d61d223059833bcc467a050ef0dad507cf6be51d354c27438a0a56e4dc5825be10d2569866a4f957d17be8aecc8ee0957acca7c6915f264a52b WHIRLPOOL c3d03455772e0fcc1cb1f47da7b4e8230d7519f3fc4775db3d2b327f9252e010acc19590d625bb777a6ab409264b8729b84af12e9edf68be8ca6df086fbf26c9
-EBUILD dhcpcd-5.99.7.ebuild 2408 SHA256 8159c2202e3fd796fe0c95e8b98a174115d0b8d9e28075bf5bd667972eeec596 SHA512 eae6e502eb12d2d0d6a39b9f5d051d98851dfb91533ab16526e189a61376be6e8c34314d07021b3575460b8ede75d73f0936cea55ef988474b7e029592196680 WHIRLPOOL eb050745ec759891120c33ac977a9c988b611b7d38f6c9004384f0d2db6962029e8da7cb8b71449d799b8f70d1120e300d79de4de2fe72fe83435b8be288613d
+EBUILD dhcpcd-6.0.2.ebuild 2407 SHA256 0ce52a024bca9499b05710f3a2fe6dc32d57f452145f10d60a20bd3bb1cea772 SHA512 ddaa8d1eaa51653d903a0d4591f73d6422d48fc5ac07707ca2e8436e79045e4670f5e462e65d5ed7e3abfdadfe9c6e4789a3f8b88d7b7977ad1f679ac4ed72ec WHIRLPOOL 4c01b53e84d07a368fab22d70bae7b6b1719ea79c8aa2afbf68fe11d82bead611649da2d00dbf3f23a65cc3a8597c1d79484dc3d028525be588825938c6627a7
 EBUILD dhcpcd-9999.ebuild 2406 SHA256 c0374af97de8ebfff1a42246c30b34b40db6934f048148604e092d86b3b224b1 SHA512 5109ffdef3ad906056e956989145b892f936426f1f90ceeccbac6613deb9ef3927f6e58d36e26ae8cb94c521cbf1bded9781b8d468b57c15549ec329ffc8cf25 WHIRLPOOL 27a3f20125a8116a12ac1047ad7bd636961f4e554301b9db4733cee5a6cf2f791da5bdd1e97563c610fed71dbd6bf5832ad2edc69444262e05785edddd2b0d4c
-MISC ChangeLog 50417 SHA256 42d34322dc37fa54cf779325821bedbdc26b46607f34760eb8f782878b0a600c SHA512 167c19a22c5f5d67e7f3bf367ac10e9536fca4c550bc9c95115eb8d74399fa2f4bcd5b6ae84b5ae4ca25b0b4cfa77db4c4bffe67f9584712f3ae363f296f2c44 WHIRLPOOL 4a134dbb8689299fcdbcadc78685c87edd11856f9d44d4c2dcf22217cec2d786a3e67eed1091f74433fc2166ff28b70b4c03c0573948c2b584ea8cb44518b44a
+MISC ChangeLog 50691 SHA256 1a48b1c7ad983edd5d0b0f46d6da54477c4029193b448d6fb6bba3bf2f8df157 SHA512 4f6f8af6243116a62bb0f1eb008e9a538cd07e3e02f3bed007f6ce2b10b0eccc298903cbc4e09bd0b89ab1869c80a8e7207a6b739af3d2e28ebcd76e0259aba8 WHIRLPOOL 6006b1af351191b4f5f3ed8c4876636dce66f2a55bb8b34dcc2268bfd454af8b1c2eebac9bbc6be503bc293748091e852e1c7014b0b0cbfd431b9452d7205756
 MISC metadata.xml 358 SHA256 d2755afa7df7488d44b4904fd1922746bd9ecae448fd73496600e03fd0938707 SHA512 a592a6368f8dc90795b2972fff1c79775de8739d214a4c4403f0528aa1caf993f6e10eb374cb1a38accc915b5cd26c7fac723a712c4570f8a71848d3d9854eac WHIRLPOOL 481a14009c01f31e40ee09d81c273adc1da21b45b5976167cbada8a774775679de5b8233d3effc3f043794cc9f78b7a1705eaa59de4829c150ebe786c46097a6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRtQktAAoJELEHsLL7fEFWGXoQAL0Bc339jbG583VF+jSafSg2
-xSpn6YEIcPEmgmGMEpZZCjXBc3m+3qD8Hh9mJtOCzGhBW2spdIzJ8SdFV4XvpIP+
-8VfT2Ir2iOWtGrkxzuPmOmUfSS3IvIhDm2pq4HPfC7jUy6Zm77SQJCtHJGfqsRj4
-vv7vhaiSXqX6sRmc9jeDNOLhk6Uk7pMFFC8emNe3BIHBtKkfQPYXhVRQuRDS+Q6X
-+olljT+hli3042iJ3u8RjC2Ne8YadTptlmZb93lyjCfzLlwq+1yyKeziKjI5AzhP
-wSAoGpGSP6bYoNVjhnFoLNSj2GNLySzVVYpwl4wekz0dKnoj8mZ4+HX+dU/YK/QI
-Of6VIzr8STcUJaKTmQjuRzvep9uK1TcXH+WtW8kjSsHYhTk8st6RzLwavHm50pvV
-27T1pmOmxvfXxAKX+7r/UOMSGc0izw+ONRRHRmiB3YUMqCEymdqMTR2jLWmiFM8S
-ub6lb0Zi9KyL4nXA6ahy2azhZ7iWiHzs2NR+Nu8REZbjTU42HJ3hFiSIrrsPbMoB
-IL7buGMZhpcL29qUp231mBm0Ug9X/z6NGRUTpdTd5HrK+MGVYBaYfeREqe8DXb42
-sxCcAbUJbOr0xJmcm8QumAobBvVCyxs53tGLDfwHpuRufoDvgpn061hmzNBwzEeF
-rWxQgOZIf6rauimLbFmf
-=cUUz
+iEYEAREIAAYFAlHYxawACgkQblQW9DDEZThqKQCaA02MtU6heansWbfyg4XnR1B8
+q7oAn1j/HYp1aA8e6n+c9wLoHl70FQZ3
+=KAnh
 -----END PGP SIGNATURE-----
