@@ -1,6 +1,9 @@
 # ChangeLog for sys-boot/grub
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.264 2013/06/30 18:25:01 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.265 2013/07/07 00:49:27 floppym Exp $
+
+  07 Jul 2013; Mike Gilbert <floppym@gentoo.org> grub-2.00-r3.ebuild:
+  sed || die
 
   30 Jun 2013; Mike Gilbert <floppym@gentoo.org> grub-9999.ebuild:
   Restore addpredict call to grub-9999.
