@@ -1,6 +1,15 @@
 # ChangeLog for net-misc/dhcpcd
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.360 2013/06/09 23:00:55 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.362 2013/07/07 01:34:26 williamh Exp $
+
+  07 Jul 2013; William Hubbs <williamh@gentoo.org> -dhcpcd-5.6.7.ebuild,
+  -dhcpcd-5.6.8.ebuild, -dhcpcd-5.99.7.ebuild:
+  remove older unstable versions
+
+*dhcpcd-6.0.2 (07 Jul 2013)
+
+  07 Jul 2013; William Hubbs <williamh@gentoo.org> +dhcpcd-6.0.2.ebuild:
+  version bump
 
   09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
   Add upstream CPE tag (security info) from ChromiumOS.
